IN DEVELOPMENT

  INTERNALS:

    * bzrlib API compatability with 0.8 has been dropped, cleaning up some
      code paths. (Robert Collins)

    * Rewritten chroot transport that prevents accidental chroot escapes when
      using urlutils against the transport's url.
      (Robert Collins, Andrew Bennetts)

  TESTING:

    * Added ``bzrlib.strace.strace`` which will strace a single callable and
      return a StraceResult object which contains just the syscalls involved
      in running it. (Robert Collins)


bzr 0.15 (not finalised)

  INTERNALS:

    * Added ``ReadLock.temporary_write_lock()`` to allow upgrading an OS read
      lock to an OS write lock. Linux can do this without unlocking, Win32
      needs to unlock in between. (John Arbash Meinel)

    * Fix minor performance regression with bzr-0.15 on pre-dirstate
      trees. (We were reading the working inventory too many times).
      (John Arbash Meinel)

    * Remove ``Branch.get_transaction()`` in favour of a simple cache of
      ``revision_history``.  Branch subclasses should override
      ``_gen_revision_history`` rather than ``revision_history`` to make use of
      this cache, and call ``_clear_revision_history_cache`` and
      ``_cache_revision_history`` at appropriate times. (Andrew Bennetts)

  BUGFIXES:

    * Take smtp_server from user config into account.
      (vila, #92195)

    * Restore Unicode filename handling for versioned and unversioned files.
      (John Arbash Meinel, #92608)

    * Don't fail during ``bzr commit`` if a file is marked removed, and
      the containing directory is auto-removed.  (John Arbash Meinel, #93681)

    * ``bzr status FILENAME`` failed on Windows because of an uncommon
      errno. (``ERROR_DIRECTORY == 267 != ENOTDIR``).
      (Wouter van Heyst, John Arbash Meinel, #90819)

    * ``bzr checkout source`` should create a local branch in the same
      format as source. (John Arbash Meinel, #93854)
 

bzr 0.15rc2  2007-03-14

  NOTES WHEN UPGRADING: